<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_notificaciones" />
        <item
            android:id="@+id/nav_compras"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_compras" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_favoritos" />
    </group>

    <item android:title="@string/menu_configuracion">
        <menu>
            <item
                android:id="@+id/nav_cuenta"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_cuenta" />
            <item
                android:id="@+id/nav_cerrar"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_cerrar_sesion" />
        </menu>
    </item>

</menu>
